# SchoolManager

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  start.sh
AGENTS/: ARCH.md  INSTRUCTION.md
backend/: CMakeLists.txt
backend/include/schoolmanager/adapters/: ApiController.h  BroadcastHub.h  FileManagerController.h  FileTemplateController.h  GradesController.h  HttpJson.h  JsonHelpers.h  RealtimePublisher.h  StudentInfoController.h  StudentWebSocketController.h  StudentsController.h  SystemController.h
backend/include/schoolmanager/application/: ApplicationError.h  DocumentFormats.h  FileTemplateUseCases.h  GradeUseCases.h  StudentInfoFields.h  StudentInfoUseCases.h  StudentUseCases.h  TemplateProcessor.h  TemplateTextRenderer.h
backend/include/schoolmanager/config/: Constants.h
backend/include/schoolmanager/domain/: Models.h
backend/include/schoolmanager/infra/: FileManagerRepository.h  FileManagerService.h  FileStorage.h  LruSqlitePool.h  SchoolIndexRepository.h  SqliteConnection.h  StoragePaths.h  StudentDataRepository.h  ZipArchiveWriter.h
backend/openapi/: openapi.json
backend/src/: main.cc  main.cpp
backend/src/adapters/: ApiController.cc  ApiController.cpp  BroadcastHub.cpp  FileManagerController.cc  FileTemplateController.cc  GradesController.cc  HttpJson.cc  JsonHelpers.cc  RealtimePublisher.cc  StudentInfoController.cc  StudentWebSocketController.cc  StudentsController.cc  SystemController.cc
backend/src/application/: DocumentFormats.cc  FileTemplateUseCases.cc  GradeUseCases.cc  StudentInfoFields.cc  StudentInfoUseCases.cc  StudentUseCases.cc  TemplateProcessor.cc  TemplateTextRenderer.cc
backend/src/domain/: Models.cc
backend/src/infra/: FileManagerRepository.cc  FileManagerService.cc  FileStorage.cc  LruSqlitePool.cc  SchoolIndexRepository.cc  SqliteConnection.cc  StoragePaths.cc  StoragePaths.cpp  StudentDataRepository.cc  StudentDataRepository.cpp  ZipArchiveWriter.cc
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  documentFormats.ts  fileManagerKeys.ts  paths.ts  studentInfoFields.ts  types.ts  useSchoolSocket.ts  useStudentSocket.ts
frontend/src/components/: BatchPage.tsx  CreateFolderDialog.tsx  FileEntryTable.tsx  FileManager.tsx  FileManagerToolbar.tsx  FilePanel.tsx  GradeTable.tsx  RenameDialog.tsx  StudentInfoDefinitionsPage.tsx  StudentInfoPanel.tsx  StudentSidebar.tsx  TrashView.tsx
frontend/src/config/: constants.ts
frontend/src/store/: dirtyStore.ts
frontend/src/styles/: app.css
